--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-size: 100%;
-  
+  box-sizing: border-box;
 }
 
 body {
@@ -17,4 +17,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.space {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
 }
