--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -1,13 +1,22 @@
-#menu-blur {
+#menu-container {
   position: absolute;
   width: 250px;
   height: 400px;
   right: 6vw;
   top: 15vh;
+}
+
+#menu-blur {
+  position: absolute;
+  width: 250px;
+  height: 400px;
+  /* right: 6vw; */
+  /* top: 15vh; */
   background: #ccc;
   border-top-left-radius: 5vh;
   border-bottom-left-radius: 5vh;
   filter: blur(5px);
+  opacity: 0.8;
   border: 1px solid red;
 }
 
@@ -15,8 +24,8 @@
   position: absolute;
   width: 250px;
   height: 400px;
-  right: 6vw;
-  top: 15vh;
+  /* right: 6vw; */
+  /* top: 15vh; */
   padding: 10vh 4vw;
   /* border: 1px solid red; */
 }
