--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -1,31 +1,55 @@
 #menu-container {
   position: absolute;
-  width: 250px;
-  height: 400px;
-  right: 6vw;
-  top: 15vh;
+  /* width: 250px; */
+  /* height: 400px; */
+  /* top: 0; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* right: 0; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* background: wheat; */
+  /* padding: 8vh 8vw; */
 }
 
+#menu-hole {
+  /* position: absolute; */
+  /* top: 0; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* right: 0; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* background: transparent; */
+  /* box-shadow: 0 0 0 99999px rgb(255, 0, 0); */
+  /* position: absolute; */
+  /* width: 100%; */
+  /* height: 40px; */
+  /* background: transparent; */
+  /* z-index: 12; */
+}  
+
 #menu-blur {
-  position: absolute;
-  width: 250px;
-  height: 400px;
+  /* position: absolute; */
+  /* width: 250px; */
+  /* height: 400px; */
   /* right: 6vw; */
   /* top: 15vh; */
-  background: #ccc;
-  border-top-left-radius: 5vh;
-  border-bottom-left-radius: 5vh;
-  filter: blur(5px);
-  opacity: 0.8;
-  border: 1px solid red;
+  /* background: #ccc; */
+  /* border-top-left-radius: 5vh; */
+  /* border-bottom-left-radius: 5vh; */
+  /* filter: blur(5px); */
+  /* opacity: 0.8; */
+  /* background: transparent; */
+  /* border: 1px solid blue; */
 }
 
 #menu {
-  position: absolute;
-  width: 250px;
-  height: 400px;
+  /* position: absolute; */
+  /* width: 250px; */
+  /* height: 400px; */
   /* right: 6vw; */
   /* top: 15vh; */
-  padding: 10vh 4vw;
+  /* padding: 10vh 4vw; */
   /* border: 1px solid red; */
 }
