--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -1,9 +1,9 @@
 .page-container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  width: 100vw;
+  height: 100vh;
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
   padding: 8vh 8vw;
 }
 
@@ -11,7 +11,7 @@
 .page {
   width: 100%;
   height: 100%;
-  border: 1.2px solid #999;
+  border: 1px solid #999;
   border-radius: 10vh;
-  padding: 3vh;
+  padding: 5vh;
 }
