--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -20,7 +20,7 @@
   /* right: 0; */
   /* width: 100%; */
   /* height: 100%; */
-  /* background: transparent; */
+  background: transparent;
   /* box-shadow: 0 0 0 99999px rgb(255, 0, 0); */
   /* position: absolute; */
   /* width: 100%; */
@@ -36,7 +36,7 @@
   /* right: 6vw; */
   /* top: 15vh; */
   /* background: #ccc; */
-  /* border-top-left-radius: 5vh; */
+  border-top-left-radius: 5vh;
   /* border-bottom-left-radius: 5vh; */
   /* filter: blur(5px); */
   /* opacity: 0.8; */
@@ -51,5 +51,5 @@
   /* right: 6vw; */
   /* top: 15vh; */
   /* padding: 10vh 4vw; */
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
