--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -7,11 +7,43 @@
   padding: 8vh 8vw;
 }
 
+.come {
+  animation: comeAnim 0.6s ease-in;
+  opacity: 1;
+}
+
+@keyframes comeAnim {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.down {
+  opacity: 0;  
+}
+
+/* back frame */
+#back-frame {
+  border: 1px solid #999;
+  /* width: 100vw; */
+  /* height: 100vh; */
+  border-radius: 10vh;
+  /* margin: 8vh 8vw; */
+  position: fixed;
+  top: 8vh;
+  bottom: 8vh;
+  left: 8vw;
+  right: 8vw;
+}
+
+
 /* HOME */
 .page {
   width: 100%;
   height: 100%;
-  border: 1px solid #999;
   border-radius: 10vh;
   padding: 5vh;
 }
