--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -21,11 +21,19 @@
   right: 8vw;
 }
 
+/* back scroll */
+#back-scroll {
+  /* position: absolute; */
+  height: 250vh;
+}
+
+.current-page {
+  position: fixed;
+}
 
 /* HOME */
 .page {
   width: 100%;
   height: 100%;
-  border-radius: 10vh;
   padding: 5vh;
 }
