--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -1,3 +1,45 @@
+/* pages container */
+.pages {
+  position: absolute;
+}
+
+.pages.zoom-out {
+  width: 100vh;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.pages.zoom-in {
+  width: 200vh;
+  height: 200vh;
+}
+
+.pages.top-left {
+  top: 0;
+  left: 0;
+}
+
+.pages.top-right {
+  top: 0;
+  right: 0;
+}
+
+.pages.bottom-left {
+  bottom: 0;
+  left: 0;
+}
+
+.pages.bottom-right {
+  bottom: 0;
+  right: 0;
+}
+
+.zoom-out .layer {
+  opacity: 1;
+}
+
+/* single page */
 .page-container {
   width: 100vw;
   height: 100vh;
@@ -33,6 +75,8 @@
 
 /* HOME */
 .page {
+  border: 1px solid #999;
+  border-radius: 10vh;
   width: 100%;
   height: 100%;
   padding: 5vh;
