--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -1,38 +1,28 @@
 #menu-container {
-  position: fixed;
-  /* width: 250px; */
-  /* height: 400px; */
-  /* top: 0; */
-  /* bottom: 0; */
-  /* left: 0; */
-  /* right: 0; */
-  /* width: 100%; */
-  /* height: 100%; */
-  /* background: wheat; */
-  /* padding: 8vh 8vw; */
-}
-
-#menu-blur {
-  /* position: absolute; */
-  /* width: 250px; */
-  /* height: 400px; */
-  /* right: 6vw; */
-  /* top: 15vh; */
-  /* background: #ccc; */
-  border-top-left-radius: 5vh;
-  /* border-bottom-left-radius: 5vh; */
-  /* filter: blur(5px); */
-  /* opacity: 0.8; */
-  /* background: transparent; */
-  /* border: 1px solid blue; */
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  background: chocolate;
+  border-radius: 99999px;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 #menu {
-  /* position: absolute; */
-  /* width: 250px; */
-  /* height: 400px; */
-  /* right: 6vw; */
-  /* top: 15vh; */
-  /* padding: 10vh 4vw; */
-  border: 1px solid red;
+  position: absolute;
+  top: 25px;
+  left: 5px;
+  width: 40px;
+  height: 40px;
+  background: rgb(105, 44, 0);
+  border-radius: 99999px;
+}
+
+#menu-container:hover #menu {
+  width: 34px;
+  height: 34px;
+  top: 8px;
+  left: 8px;
 }
