--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -96,10 +96,11 @@
 
 .page {
   border: 1px solid #999;
-  border-radius: 10vh;
-  width: 100%;
-  height: 100%;
+  border-radius: 60px;
+  width: 84%;
+  height: 84%;
   padding: 5vh;
+  margin: 6% 8%;
 }
 
 .layer {
@@ -107,9 +108,9 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  font-size: 10vh;
+  font-size: 400%;
   text-align: center;
-  padding-top: 130px;
+  padding-top: 25%;
   cursor: crosshair;
 }
 
