--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -20,9 +20,30 @@
   border-radius: 99999px;
 }
 
+#shadow {
+  position: absolute;
+  top: -45px;
+  left: 5px;
+  width: 34px;
+  height: 34px;
+  background: rgb(105, 44, 0);
+  border-radius: 99999px;
+  /* box-shadow: 0px -4px 5px 3px rgba(20, 16, 14, 0.625); */
+}
+
 #menu-container:hover #menu {
+  width: 34px;
+  height: 34px;
+  top: 55px;
+  left: 8px;
+}
+
+#menu-container:hover #shadow {
+  position: absolute;
   width: 34px;
   height: 34px;
   top: 8px;
   left: 8px;
+  border-radius: 99999px;
+  /* box-shadow: 0px -4px 5px 3px rgba(20, 16, 14, 0.625); */
 }
