--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -38,6 +38,7 @@
 
 .layer.is {
   opacity: 1;
+  font-size: 500%;
 }
 
 .layer.not {
@@ -108,24 +109,31 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  font-size: 400%;
-  text-align: center;
-  padding-top: 25%;
+  font-size: 500%;
   cursor: crosshair;
+  text-align: right;
+  padding: 2%;
 }
 
 #home .layer {
   background: yellowgreen;
+  /* text-align: left; */
 }
 
 #about .layer {
   background: sandybrown;
+  text-align: left;
 }
 
 #works .layer {
   background: magenta;
+  /* padding-top: 30vh; */
+  /* text-align: right; */
 }
 
 #contact .layer {
   background: gold;
+  /* text-align: right; */
+  /* padding-top: 30vh; */
+  /* align-content: flex-end; */
 }
