--- a/src/components/layout/menu.css
+++ b/src/components/layout/menu.css
@@ -4,7 +4,7 @@
   left: 20px;
   width: 50px;
   height: 50px;
-  background: chocolate;
+  background: transparent;
   border-radius: 99999px;
   cursor: pointer;
   overflow: hidden;
@@ -16,19 +16,34 @@
   height: 34px;
   top: 8px;
   left: 8px;
-  background: rgb(105, 44, 0);
+  background: rosybrown;
   border-radius: 99999px;
 }
 
 #shadow {
   position: absolute;
-  top: -45px;
+  top: -38px;
   left: 5px;
   width: 34px;
   height: 34px;
-  background: rgb(105, 44, 0);
+  background: rosybrown;
   border-radius: 99999px;
-  /* box-shadow: 0px -4px 5px 3px rgba(20, 16, 14, 0.625); */
+}
+
+#menu-desc {
+  position: fixed;
+  top: 15px;
+  left: 0;
+  color: rosybrown;
+  font-size: 300%;
+  opacity: 0;
+  background: transparent;
+  padding-left: 20px;
+}
+
+#menu-container:hover #menu-desc {
+  left: 60px;
+  opacity: 0.9;
 }
 
 #menu-container:hover #menu {
@@ -45,5 +60,13 @@
   top: 8px;
   left: 8px;
   border-radius: 99999px;
-  /* box-shadow: 0px -4px 5px 3px rgba(20, 16, 14, 0.625); */
+}
+
+#menu-cover-for-hover {
+  position: fixed;
+  width: 200px;
+  height: 70px;
+  top: 0;
+  left: 0;
+  opacity: 0;
 }
