--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -7,8 +7,6 @@
 .pages.zoom-out {
   width: 100vw;
   height: 100vh;
-  top: 0;
-  left: 0;
 }
 
 .pages.zoom-in {
@@ -96,12 +94,11 @@
 }
 
 .page {
-  border: 1px solid #999;
+  border: 2px solid red;
   border-radius: 60px;
-  width: 84%;
-  height: 84%;
-  padding: 5vh;
-  margin: 6% 8%;
+  width: 100%;
+  height: 100%;
+  /* padding: 5vh; */
 }
 
 .layer {
@@ -111,30 +108,32 @@
   z-index: 10;
   font-size: 500%;
   cursor: crosshair;
-  text-align: right;
   padding: 2%;
+  text-align: center;
 }
 
 #home .layer {
   background: yellowgreen;
-  /* text-align: left; */
 }
 
 #about .layer {
   background: sandybrown;
-  text-align: left;
 }
 
 #works .layer {
   background: magenta;
-  text-align: left;
-  /* padding-top: 30vh; */
-  /* text-align: right; */
 }
 
 #contact .layer {
   background: gold;
-  /* text-align: right; */
-  /* padding-top: 30vh; */
-  /* align-content: flex-end; */
+}
+
+/* about */
+#about .page {
+  /* height: ; */
+  /* transform: rotateZ(90deg); */
+}
+
+#about .container {
+  height: 200vw;
 }
