--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -98,7 +98,7 @@
   border-radius: 60px;
   width: 100%;
   height: 100%;
-  /* padding: 5vh; */
+  padding: 5vh;
 }
 
 .layer {
@@ -126,14 +126,4 @@
 
 #contact .layer {
   background: gold;
-}
-
-/* about */
-#about .page {
-  /* height: ; */
-  /* transform: rotateZ(90deg); */
-}
-
-#about .container {
-  height: 200vw;
 }
