--- a/src/components/pages/styles/contact.css
+++ b/src/components/pages/styles/contact.css
@@ -1,6 +1,29 @@
 #contact .go-to-works {
   position: absolute;
-  width: 100px;
-  height: 100px;
-  background: #ccc;
+  top: 70%;
+  right: 5%;
+  cursor: pointer;
+}
+
+#contact .go-to-works .shape {
+  width: 50px;
+  height: 50px;
+  background: magenta;
+}
+
+#contact .go-to-works .desc {
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  transform: rotateZ(-90deg);  
+  font-size: 300%;
+}
+
+#contact .go-to-works .bar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 7%;
+  background: magenta;
 }
