--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -72,7 +72,7 @@
 }
 
 .zoom-out .page-container:hover .layer {
-  /* animation: pgeContainerHoverAnim 0.6s ease-in-out; */
+  /* animation: pageContainerHoverAnim 0.6s ease-in-out; */
   filter: brightness(120%);
   /* background: lightblue !important; */
 }
