--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -41,7 +41,6 @@
 
 .layer.not {
   opacity: 0;
-  z-index: -9999;
   animation: fadeOut 0.3s ease-out;
 }
 
@@ -71,7 +70,7 @@
   height: 50%;
 }
 
-.zoom-out .page-container:hover .layer {
+.zoom-out .page-container:hover {
   /* animation: pageContainerHoverAnim 0.6s ease-in-out; */
   filter: brightness(120%);
   /* background: lightblue !important; */
@@ -81,6 +80,10 @@
   /* filter: blur(7px); */
   /* transition: 0.7s; */
   filter: brightness(80%);
+}
+
+.zoom-out .page-container~.page-container:hover {
+  color: initial;
 }
 
 #home.page-container {
@@ -115,42 +118,107 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  font-size: 500%;
   cursor: crosshair;
-  padding: 2%;
+  padding-top: 17vh;
   text-align: center;
+  font-size: 500%;
+}
+
+.layer h1 {
+  display: inline-block;
+  font-size: 16vh;
+  font-weight: 100;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 #home .layer {
+  /* width: 80%; */
   background: yellowgreen;
+  background: tan;
+}
+
+#home .layer h1 {
+  color: teal;
 }
 
 #about .layer {
-  background: sandybrown;
+  /* width: 120%; */
+  right: 0;
+  background: rgb(224, 122, 32);
+  background: teal;
+}
+
+#about .layer h1 {
+  color: thistle;
 }
 
 #works .layer {
+  /* width: 90%; */
+  right: 0;
   background: magenta;
+  background: thistle;
+}
+
+#works .layer h1 {
+  color: tomato;
 }
 
 #contact .layer {
+  /* width: 110%; */
   background: gold;
+  background: tomato;
 }
 
-/* test for now */
-.dest-works {
-  /* bottom: 0 !important; */
-  /* right: 0 !important; */
-  animation: goToWorksAnim 1s ease-in-out;
+#contact .layer h1 {
+  color: tan;
 }
 
-@keyframes goToWorksAnim {
+/* test */
+#home .layer {
+  /* animation: widhtTo80 3s ease-in-out; */
+}
+#about .layer {
+  /* animation: widhtTo120 3s ease-in-out; */
+}
+#works .layer {
+  /* animation: widhtTo90 3s ease-in-out; */
+}
+#contact .layer {
+  /* animation: widhtTo110 3s ease-in-out; */
+}
+
+@keyframes widhtTo90 {
   0% {
-    bottom: initial;
-    right: initial;
+    width: 100%;
   }
   100% {
-    bottom: 0;
-    right: 0;
+    width: 90%;
+  }
+}
+
+@keyframes widhtTo110 {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+
+@keyframes widhtTo80 {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 80%;
+  }
+}
+
+@keyframes widhtTo120 {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 120%;
   }
 }
