--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -71,19 +71,12 @@
 }
 
 .zoom-out .page-container:hover {
-  /* animation: pageContainerHoverAnim 0.6s ease-in-out; */
-  filter: brightness(120%);
-  /* background: lightblue !important; */
+  animation: pageContainerHoverAnim 0.6s ease-in-out;
+  filter: brightness(115%);
 }
 
 .zoom-out .page-container:hover~.page-container {
-  /* filter: blur(7px); */
-  /* transition: 0.7s; */
-  filter: brightness(80%);
-}
-
-.zoom-out .page-container~.page-container:hover {
-  color: initial;
+  /* filter: brightness(30%); */
 }
 
 #home.page-container {
