--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -36,12 +36,20 @@
 
 .layer.is {
   opacity: 1;
-  font-size: 500%;
+}
+
+.back-layer.is {
+  opacity: 1;
 }
 
 .layer.not {
   opacity: 0;
   animation: fadeOut 0.3s ease-out;
+}
+
+.back-layer.not {
+  opacity: 0;
+  animation: fadeOut 0.2s ease-out;
 }
 
 /* back frame */
@@ -70,13 +78,9 @@
   height: 50%;
 }
 
-.zoom-out .page-container:hover {
+.zoom-out .layer:hover {
   animation: pageContainerHoverAnim 0.6s ease-in-out;
   filter: brightness(115%);
-}
-
-.zoom-out .page-container:hover~.page-container {
-  /* filter: brightness(30%); */
 }
 
 #home.page-container {
@@ -110,11 +114,17 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 10;
   cursor: crosshair;
   padding-top: 17vh;
   text-align: center;
   font-size: 500%;
+}
+
+.back-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: crosshair;
 }
 
 .layer h1 {
@@ -134,6 +144,10 @@
   color: teal;
 }
 
+#home .back-layer {
+  background: teal;
+}
+
 #about .layer {
   /* width: 120%; */
   right: 0;
@@ -143,6 +157,10 @@
 
 #about .layer h1 {
   color: thistle;
+}
+
+#about .back-layer {
+  background: thistle;
 }
 
 #works .layer {
@@ -156,6 +174,10 @@
   color: tomato;
 }
 
+#works .back-layer {
+  background: tomato;
+}
+
 #contact .layer {
   /* width: 110%; */
   background: gold;
@@ -166,52 +188,14 @@
   color: tan;
 }
 
-/* test */
-#home .layer {
-  /* animation: widhtTo80 3s ease-in-out; */
-}
-#about .layer {
-  /* animation: widhtTo120 3s ease-in-out; */
-}
-#works .layer {
-  /* animation: widhtTo90 3s ease-in-out; */
-}
-#contact .layer {
-  /* animation: widhtTo110 3s ease-in-out; */
+#contact .back-layer {
+  background: tan;
 }
 
-@keyframes widhtTo90 {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 90%;
-  }
+#home .layer, #about .layer, #contact h1, #works h1, #contact .back-layer, #works .back-layer {
+  transform: skew(45deg);
 }
 
-@keyframes widhtTo110 {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 110%;
-  }
-}
-
-@keyframes widhtTo80 {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 80%;
-  }
-}
-
-@keyframes widhtTo120 {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 120%;
-  }
+#contact .layer, #works .layer,#home h1, #about h1,  #home .back-layer, #about .back-layer {
+  transform: skew(-45deg);
 }
