--- a/src/styles/zIndex.css
+++ b/src/styles/zIndex.css
@@ -29,3 +29,8 @@ body {
 .back-layer.not {
   z-index: -9999;
 }
+
+.layer, .back-layer {
+  /* border: 50px solid rgba(0, 0, 0, 0.3); */
+  /* border-radius: 70px; */
+}
