--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -115,8 +115,7 @@
   height: 100%;
   cursor: crosshair;
   padding-top: 12vh;
-  padding-top: 27vh;
-  animation: myAnim 0.7s ease-in-out infinite alternate-reverse;
+  /* animation: myAnim 0.7s ease-in-out infinite alternate-reverse; */
   text-align: center;
   font-size: 500%;
 }
@@ -124,13 +123,9 @@
 @keyframes myAnim {
   0% {
     padding-top: 0vh;
-    font-size: 100%;
-    cursor: crosshair;
   }
   100% {
     padding-top: 27vh;
-    font-size: 500%;
-    cursor: pointer;
   }
 }
 
@@ -139,12 +134,6 @@
   width: 100%;
   height: 100%;
   cursor: crosshair;
-}
-
-.layer, .back-layer {
-  border-style: solid;
-  border-width: 5vh;
-  border-radius: 70px;
 }
 
 .layer h1 {
