--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -34,6 +34,7 @@
   right: 0;
 }
 
+
 .layer.is {
   opacity: 1;
 }
@@ -52,30 +53,16 @@
   animation: fadeOut 0.2s ease-out;
 }
 
-/* back frame */
-#back-frame {
-  border: 1px solid #999;
-  /* width: 100vw; */
-  /* height: 100vh; */
-  border-radius: 10vh;
-  /* margin: 8vh 8vw; */
-  position: fixed;
-  top: 8vh;
-  bottom: 8vh;
-  left: 8vw;
-  right: 8vw;
-}
-
 /* back scroll */
 #back-scroll {
   display: none;
 }
 
-/* HOME */
 .page-container {
   position: absolute;
   width: 50%;
   height: 50%;
+  opacity: 0.92;
 }
 
 .zoom-out .layer:hover {
@@ -114,7 +101,7 @@
   width: 100%;
   height: 100%;
   cursor: crosshair;
-  padding-top: 12vh;
+  padding-top: 18vh;
   /* animation: myAnim 0.7s ease-in-out infinite alternate-reverse; */
   text-align: center;
   font-size: 500%;
@@ -138,14 +125,13 @@
 
 .layer h1 {
   display: inline-block;
-  font-size: 16vh;
+  font-size: 14vh;
   font-weight: 100;
   font-family: 'Courier New', Courier, monospace;
 }
 
 #home .layer {
   /* width: 80%; */
-  background: yellowgreen;
   background: tan;
 }
 
@@ -160,7 +146,6 @@
 #about .layer {
   /* width: 120%; */
   right: 0;
-  background: rgb(224, 122, 32);
   background: teal;
 }
 
@@ -175,7 +160,6 @@
 #works .layer {
   /* width: 90%; */
   right: 0;
-  background: magenta;
   background: thistle;
 }
 
@@ -189,7 +173,6 @@
 
 #contact .layer {
   /* width: 110%; */
-  background: gold;
   background: tomato;
 }
 
@@ -202,9 +185,11 @@
 }
 
 #home .layer, #about .layer, #contact h1, #works h1, #contact .back-layer, #works .back-layer {
-  transform: skew(45deg);
+  transform: skew(45deg); /* i cant decide witch i want */
+  transform: skew(57.5deg);
 }
 
 #contact .layer, #works .layer,#home h1, #about h1,  #home .back-layer, #about .back-layer {
-  transform: skew(-45deg);
+  transform: skew(-45deg); /* i cant decide witch i want */
+  transform: skew(-57.5deg);
 }
