--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -62,6 +62,9 @@
   position: absolute;
   width: 50%;
   height: 50%;
+}
+
+.zoom-out .page-container {
   opacity: 0.92;
 }
 
@@ -185,11 +188,11 @@
 }
 
 #home .layer, #about .layer, #contact h1, #works h1, #contact .back-layer, #works .back-layer {
-  transform: skew(45deg); /* i cant decide witch i want */
+  transform: skew(45deg); /* i cant decide witch one I want */
   transform: skew(57.5deg);
 }
 
 #contact .layer, #works .layer,#home h1, #about h1,  #home .back-layer, #about .back-layer {
-  transform: skew(-45deg); /* i cant decide witch i want */
+  transform: skew(-45deg); /* i cant decide witch one I want */
   transform: skew(-57.5deg);
 }
