--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -72,7 +72,7 @@
 }
 
 .zoom-out .back-layer:hover {
-  filter: brightness(85%);
+  filter: brightness(115%);
 }
 
 #home.page-container {
@@ -109,6 +109,7 @@
   cursor: crosshair;
   text-align: center;
   font-size: 500%;
+  padding-top: 23%;
 }
 
 .back-layer {
