--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -176,9 +176,13 @@
 }
 
 #home .layer, #about .layer, #contact h1, #works h1, #contact .back-layer, #works .back-layer {
+  transform: skew(57.6deg);
   transform: skew(45deg);
+  transform: skew(0);
 }
 
 #contact .layer, #works .layer,#home h1, #about h1,  #home .back-layer, #about .back-layer {
+  transform: skew(-57.6deg);
   transform: skew(-45deg);
+  transform: skew(0);
 }
