--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -178,7 +178,6 @@
 #home .layer, #about .layer, #contact h1, #works h1, #contact .back-layer, #works .back-layer {
   transform: skew(57.6deg);
   transform: skew(45deg);
-  transform: skew(0);
 }
 
 #contact .layer, #works .layer,#home h1, #about h1,  #home .back-layer, #about .back-layer {
@@ -188,4 +187,5 @@
 
 .transiting .layer, .transiting .back-layer, .transiting h1 {
   transform: skew(0) !important;
+  transition: 1s;
 }
