--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -52,6 +52,12 @@
   animation: fadeOut 0.2s ease-out;
 }
 
+.side-layer.not {
+  opacity: 0;
+  animation: fadeOut 0.2s ease-out;
+
+}
+
 /* back scroll */
 #back-scroll {
   display: none;
@@ -250,6 +256,28 @@
 .transiting.come #works .side-layer,
 .transiting.come #contact .side-layer {
   animation: layersComeAnim2 1.31s ease-in-out;
+}
+
+.transiting.go #contact .layer,
+.transiting.go #works .layer,
+.transiting.go #home h1,
+.transiting.go #about h1,
+.transiting.go #home .back-layer,
+.transiting.go #about .back-layer,
+.transiting.go #home .side-layer,
+.transiting.go #about .side-layer {
+  /* animation: layersGoAnim1 1.31s ease-in-out; */
+}
+
+.transiting.go #home .layer,
+.transiting.go #about .layer,
+.transiting.go #contact h1,
+.transiting.go #works h1,
+.transiting.go #contact .back-layer,
+.transiting.go #works .back-layer,
+.transiting.go #works .side-layer,
+.transiting.go #contact .side-layer {
+  /* animation: layersGoAnim2 1.31s ease-in-out; */
 }
 
 .transiting .page {
