--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -211,7 +211,6 @@
 #works .back-layer,
 #works .side-layer,
 #contact .side-layer {
-  transform: skew(57.6deg);
   transform: skew(45deg);
 }
 
@@ -222,7 +221,6 @@
 #about .back-layer,
 #home .side-layer,
 #about .side-layer {
-  transform: skew(-57.6deg);
   transform: skew(-45deg);
 }
 
@@ -261,4 +259,51 @@
 .transiting .page {
   opacity: 0;
   transition: 0.1s;
+}
+
+@media (max-width: 900px) {
+  .pages.zoom-out {
+    width: 100vw;
+    height: 400vh;
+    left: 0;
+  }
+
+  .pages.top-right {
+    top: 0;
+  }
+
+  .pages.top-right {
+    top: -100vh;
+  }
+
+  .pages.bottom-right {
+    top: -200vh;
+  }
+
+  .pages.bottom-left {
+    top: -300vh;
+  }
+
+  .page-container {
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 25%;
+  }
+
+  #home.page-container {
+    top: 0;
+  }
+
+  #about.page-container {
+    top: 100vh;
+  }
+
+  #works.page-container {
+    top: 200vh;
+  }
+
+  #contact.page-container {
+    top: 300vh;
+  }
 }
