--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -292,18 +292,18 @@
   }
 
   #home.page-container {
-    top: 0;
+    margin-top: 0;
   }
 
   #about.page-container {
-    top: 100vh;
+    margin-top: 100vh;
   }
 
   #works.page-container {
-    top: 200vh;
+    margin-top: 200vh;
   }
 
   #contact.page-container {
-    top: 300vh;
+    margin-top: 300vh;
   }
 }
