--- a/src/styles/zIndex.css
+++ b/src/styles/zIndex.css
@@ -1,7 +1,3 @@
-body {
-  width: 100vw;
-}
-
 #modal {
   z-index: 20;
 }
@@ -36,4 +32,8 @@ body {
 
 .side-layer.not {
   z-index: -9999;
+}
+
+.traversing .layer {
+  z-index: 10 !important;
 }
