--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -272,8 +272,21 @@
 }
 
 .zoom-in .layer, .zoom-in .layer h1 {
-  transform: skew(0deg) !important;
-  transition: 0 !important;
+  /* transform: skew(0deg) !important; */
+  transition: 0s !important;
+}
+
+.pages.dest-bottom-right {
+  animation: hfbvjxf 1s ease-in-out;
+}
+
+@keyframes hfbvjxf {
+  0% {
+
+  }
+  100% {
+    left: -100vw;
+  }
 }
 
 @media (max-width: 900px) {
