--- a/src/components/pages/styles/about.css
+++ b/src/components/pages/styles/about.css
@@ -2,3 +2,20 @@
   font-size: 400%;
   text-align: center;
 }
+
+#about .go-to-home-container {
+  position: absolute;
+  left: 0%;
+  top: 40%;
+  cursor: pointer;
+  font-size: 200%;
+  transform: rotateZ(90deg);
+}
+
+#about .go-to-works-container {
+  position: absolute;
+  bottom: 4%;
+  left: 45%;
+  cursor: pointer;
+  font-size: 200%;
+}
