--- a/src/components/pages/styles/pages.css
+++ b/src/components/pages/styles/pages.css
@@ -130,8 +130,23 @@
   cursor: crosshair;
 }
 
-.layer h1 {
+.zoom-out-vertical {
+  padding-top: 18vh;
+}
+
+.zoom-out-vertical h1 {
   font-size: 14vh;
+}
+
+.zoom-in-vertical {
+  padding-top: 36vh;
+}
+
+.zoom-in-vertical h1 {
+  font-size: 28vh;
+}
+
+.layer h1 {
   font-weight: 100;
   font-family: 'Courier New', Courier, monospace;
 }
